Update pom.xml
Adds log4j graalvm arguments to default-testCompile